Sync of removed files